--- a/src/components/Scoreboard/PlayerItem.css
+++ b/src/components/Scoreboard/PlayerItem.css
@@ -1,8 +1,6 @@
 .avatar {
 	display: inline;
-	margin: 0 auto;
 	height: 100%;
-	width: auto;
 }
 
 .avatar-container {
@@ -11,6 +9,7 @@
 	position: relative;
 	overflow: hidden;
 	border-radius: 50%;
+	margin-right: 24px;
 }
 
 .delete-player {
@@ -31,10 +30,9 @@
 
 .player-info {
 	display: flex;
-	justify-content: space-evenly;
 	align-items: center;
 	width: 50%;
-	margin-right: 16px;
+	margin: 0 0px 0 24px;
 }
 
 .player-container:last-child {
@@ -62,7 +60,7 @@
 	font-size: 24px;
 	width: 5%;
 	margin-right: 16px;
-	color: #E8E8E8;
+	color: #e8e8e8;
 }
 
 .vote-button {
