adjust header style

--- a/src/components/Scoreboard/PlayerList.css
+++ b/src/components/Scoreboard/PlayerList.css
@@ -6,8 +6,6 @@
 .header-row {
 	display: flex;
 	padding: 8px 16px 0px;
-	margin-top: 24px;
-	border-radius: 8px;
 	text-align: left;
 }
 
@@ -23,7 +21,7 @@
 .player {
 	width: 50%;
 	margin-right: 16px;
-	padding: 0px 48px;
+	padding: 0px 0px 0px 48px;
 }
 
 .score {
